--- a/gradle/animalSniffer.gradle
+++ b/gradle/animalSniffer.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'be.insaneprogramming.gradle.animalsniffer'
 animalsniffer {
-    signature = "org.codehaus.mojo.signature:java16:+@signature"
-    ignores = ["sun.misc.Unsafe", "java.lang.Throwable", "java.lang.ProcessBuilder", 'java.lang.ProcessBuilder$Redirect']
+    signature = "org.codehaus.mojo.signature:java17:+@signature"
+    ignores = ["sun.misc.Unsafe", "java.lang.Throwable"]
     annotations = ["water.util.annotations.IgnoreJRERequirement"] 
 }
 
