Remove Java6 references from documentation.

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,7 @@ profile=Java
 codename=bleeding_edge
 # Run findbugs
 doFindbugs=false
-# Run animal sniffer - by default false, but if java6 bytecode is requested
-# then animal sniffer is run
+# Run animal sniffer to verify compatibility of API with actual Java version
 doAnimalSniffer=false
 # The flag to include ORC support inside default h2o.jar.
 # WARNING: this will upgrade default Hadoop client version to one supporting ORC
