--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
         classpath 'org.testng:testng:6.8'
         classpath "be.insaneprogramming.gradle:animalsniffer-gradle-plugin:+"
         classpath 'me.champeau.gradle:jmh-gradle-plugin:0.3.1'
+        classpath "net.ltgt.gradle:gradle-apt-plugin:0.10"
         // Note: Analyze unused/undefined dependencies for each module - good for debugging
         // However, later it should be enabled by default
         //classpath 'ca.cutterslade.gradle:gradle-dependency-analyze:1.1.0'
@@ -211,6 +212,7 @@ subprojects {
     if (project in javaProjects) {
         apply from: "$rootDir/gradle/java.gradle"
         apply from: "$rootDir/gradle/cp.gradle"
+        apply plugin: "net.ltgt.apt"
         // Include Findbugs only if the property is specified
         if (applyFindbugsPlugin) {
             apply from: "$rootDir/gradle/findbugs.gradle"
