--- a/h2o-algos/build.gradle
+++ b/h2o-algos/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: "net.ltgt.apt"
 //
 // H2O Algos Module
 //
@@ -12,7 +13,7 @@ dependencies {
   // Test dependencies only
   testCompile "junit:junit:${junitVersion}"
   testCompile project(path: ":h2o-core", configuration: "testArchives")
-  compileOnly group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc3'
+  compile group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc3'
   apt group: 'com.google.auto.service', name: 'auto-service', version: '1.0-rc3'
 }
 
